--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+body { 
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+h1{
+  margin: 0;
+  padding: 0;
+}
+
+div.container{
+  overflow: auto;
+}
+img{
+  width:20%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img.ott{
+  display: block;
+  width: 70%;
+  height: auto;
+}
+
+img.code{
+  display: block;
+  width: 70%;
+  height: auto;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.introduction{
+  margin: 0;
+  padding: 0;
+  height: 50vh;
+  min-height: 300px;
 }
